mule-user-guide/v/3.6/choosing-mel-or-ctl2-as-scripting-engine.adoc
= 在MEL和CTL2之间选择DataMapper脚本
:keywords: datamapper

[NOTE]
在Mule ESB 3.x的所有当前和未来版本中，DataMapper将继续得到完全支持，但它将在Mule 4.0中被删除。我们建议，如果您希望利用 link:/mule-user-guide/v/3.8/dataweave[DataWeave]的新功能，或者如果您启动新项目，请立即升级。但是，如果您没有迫切需要利用新功能，我们建议您等到Mule 4.0发布。


Anypoint DataMapper元素映射的转换代码可以使用两种语言之一生成：Mule表达式语言（MEL）或CTL2（Clover转换语言）。

从Mule 3.4开始，MEL是默认语言。 MEL与CTL2相比具有许多技术优势：

*  MEL可以调用任何Java库。例如，您可以使用常用的Java字符串和数学函数，以及您在项目中包含的任何Java库。

*  MEL在整个Mule的其余部分都用作主要表达语言，因此在DataMapper中使用它可以获得与其他Mule ESB更加一致的体验。

*  MEL正在积极开发新功能，继续揭露Mule功能。

Mule建议您将MEL而不是CTL2用于未来的DataMapper开发。

CTL2从第三方获得许可用于以前版本的DataMapper，并且由于向后兼容的原因，它仍然得到完全支持，但它不提供超过MEL的功能优势。请注意，在DataMapper中使用MEL时，Mule消息对象不可用。

下面的图片展示了DataMapper的 link:/mule-user-guide/v/3.6/datamapper-visual-reference[脚本视图]在CTL2（下方，顶部）和MEL（下方，底部）显示相同的映射。

image:1-MEL.png[1-MEL]

image:2-CTL2.png[2-CTL2]

== 设置DataMapper脚本语言首选项

默认情况下，Studio使用MEL作为DataMapper的脚本引擎。但是，如果您希望将CTL2用作默认值，则可以更改此设置。

. 在Studio中，导航至*Preferences*> *Anypoint Studio*> *DataMapper.*

. 使用*Default Script Type*字段的下拉列表选择`CTL`。
+
image:3-setting.png[3，设置]

. 点击*OK*保存您的更改。

== 另请参阅

* 有关MEL的完整信息，请参阅 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言]。

* 有关CTL语法和功能（包括语言和功能参考）的完整信息，请下载 link:_attachments/Mule+ESB+and+Studio+-+Datamapper+CTL2+Reference.pdf[Mule Datamapper CTL2参考]
